manifests/svc.yml

apiVersion: v1
kind: Service
metadata:
  name: kitana-svc 
spec:
  type: ClusterIP
  ports:
  - port: 8008
  selector:
    app: kitana
